--- a/index.html
+++ b/index.html
@@ -35,36 +35,36 @@
 <a id="trips" class="anchor" href="#trips" aria-hidden="true"><span class="octicon octicon-link"></span></a>Trips</h3>
 
 <ol>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data1.csv.zip">trip_data_1_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_2.csv.zip">trip_data_2.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_3.csv.zip">trip_data_3_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_4.csv.zip">trip_data_4_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_5.csv.zip">trip_data_5_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_6.csv.zip">trip_data_6_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_7.csv.zip">trip_data_7.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_8.csv.zip">trip_data_8.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_9.csv.zip">trip_data_9.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_10.csv.zip">trip_data_10.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_11.csv.zip">trip_data_11_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_12.csv.zip">trip_data_12.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_1.csv.zip">trip_data_1.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_2.csv.zip">trip_data_2.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_3.csv.zip">trip_data_3.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_4.csv.zip">trip_data_4.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_5.csv.zip">trip_data_5.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_6.csv.zip">trip_data_6.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_7.csv.zip">trip_data_7.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_8.csv.zip">trip_data_8.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_9.csv.zip">trip_data_9.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_10.csv.zip">trip_data_10.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_11.csv.zip">trip_data_11.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_12.csv.zip">trip_data_12.csv.zip</a></li>
 </ol>
 
 <h3>
 <a id="fares" class="anchor" href="#fares" aria-hidden="true"><span class="octicon octicon-link"></span></a>Fares</h3>
 
 <ol>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare1.csv.zip">trip_fare_1_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_2.csv.zip">trip_fare_2.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_3.csv.zip">trip_fare_3_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_4.csv.zip">trip_fare_4_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_5.csv.zip">trip_fare_5_csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_1.csv.zip">trip_fare_1.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_2.csv.zip">trip_fare_2.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_3.csv.zip">trip_fare_3.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_4.csv.zip">trip_fare_4.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_5.csv.zip">trip_fare_5.csv.zip</a></li>
 <li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_6.csv.zip">trip_fare_6_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_7.csv.zip">trip_fare_7.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_8.csv.zip">trip_fare_8.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_9.csv.zip">trip_fare_9.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_10.csv.zip">trip_fare_10.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_11.csv.zip">trip_fare_11_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_12.csv.zip">trip_fare_12.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_7.csv.zip">trip_fare_7.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_8.csv.zip">trip_fare_8.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_9.csv.zip">trip_fare_9.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_10.csv.zip">trip_fare_10.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_11.csv.zip">trip_fare_11.csv.zip</a></li>
+<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_12.csv.zip">trip_fare_12.csv.zip</a></li>
 </ol>
 
 <h3>
