--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
         <ul>
           <li><a href="https://github.com/andresmh/nyctaxitrips">View On <strong>GitHub</strong></a></li>
+          <li><a href="http://chriswhong.com/open-data/foil_nyc_taxi/">Read the story behind</li>
         </ul>
       </header>
       <section>
         <h3>
 <a id="nyc-taxi-data" class="anchor" href="#nyc-taxi-data" aria-hidden="true"><span class="octicon octicon-link"></span></a>NYC Taxi Data</h3>
 
-<p>Read more about <a href="http://chriswhong.com/open-data/foil_nyc_taxi/">where these data come from</a> .</p>
 
 <h3>
 <a id="trips" class="anchor" href="#trips" aria-hidden="true"><span class="octicon octicon-link"></span></a>Trips</h3>
