--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
           <li><a href="https://github.com/andresmh/nyctaxitrips">View On <strong>GitHub</strong></a></li>
           <li><a href="http://chriswhong.com/open-data/foil_nyc_taxi/">Read the <strong>story</strong></li>
-          <li><a href="http://nyctaxi.herokuapp.com/">Check out the <strong>visualization</strong></li>
+          <li><a href="http://nyctaxi.herokuapp.com/">Check the <strong>viz</strong></li>
         </ul>
       </header>
       <section>
