pointing to the data in archive.org

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="https://github.com/andresmh/nyctaxitrips">View On <strong>GitHub</strong></a></li>
           <li><a href="http://chriswhong.com/open-data/foil_nyc_taxi/">Read the <strong>story</strong></a></li>
           <li><a href="http://nyctaxi.herokuapp.com/">Check the <strong>viz</strong></a></li>
+          <li><a href="https://archive.org/details/nycTaxiTripData2013">Go to the Archive.org page</li>   
         </ul>
       </header>
       <section>
@@ -36,36 +37,14 @@
 <a id="trips" class="anchor" href="#trips" aria-hidden="true"><span class="octicon octicon-link"></span></a>Trips</h3>
 
 <ol>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_1.csv.zip">trip_data_1.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_2.csv.zip">trip_data_2.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_3.csv.zip">trip_data_3.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_4.csv.zip">trip_data_4.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_5.csv.zip">trip_data_5.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_6.csv.zip">trip_data_6.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_7.csv.zip">trip_data_7.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_8.csv.zip">trip_data_8.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_9.csv.zip">trip_data_9.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_10.csv.zip">trip_data_10.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_11.csv.zip">trip_data_11.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_data_12.csv.zip">trip_data_12.csv.zip</a></li>
+<li><a href="https://archive.org/download/nycTaxiTripData2013/trip_data.7z">trip_data.7z</a></li>
 </ol>
 
 <h3>
 <a id="fares" class="anchor" href="#fares" aria-hidden="true"><span class="octicon octicon-link"></span></a>Fares</h3>
 
 <ol>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_1.csv.zip">trip_fare_1.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_2.csv.zip">trip_fare_2.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_3.csv.zip">trip_fare_3.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_4.csv.zip">trip_fare_4.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_5.csv.zip">trip_fare_5.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_6.csv.zip">trip_fare_6_csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_7.csv.zip">trip_fare_7.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_8.csv.zip">trip_fare_8.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_9.csv.zip">trip_fare_9.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_10.csv.zip">trip_fare_10.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_11.csv.zip">trip_fare_11.csv.zip</a></li>
-<li><a href="https://nyctaxitrips.blob.core.windows.net/data/trip_fare_12.csv.zip">trip_fare_12.csv.zip</a></li>
+<li><a href="https://archive.org/download/nycTaxiTripData2013/trip_fare.7z">trip_fare.7z</a></li>
 </ol>
 
 <h3>
@@ -74,7 +53,7 @@
 <p>Big kudos to <a href="http://chriswhong.com">Chris Wong</a> for getting the data.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/andresmh">andresmh</a></p>
+        <p>This project is maintained by <a href="https://github.com/andresmh">andresmh</a>. The data is now hosted at archive.org.</p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
